# rust-investment-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  makefile
.sqlx/: query-51f3c3dbb83fe897b64ef785a48a7162d2747a95d9e9e9ef0ec9c4745ba4db86.json  query-5a1cb7da7753dc03cf153be7fd94cb1e500dd945c1d668f73ebcf3a9904f7176.json
config/: dev.toml  local.toml  prod.toml
migrations/20250219_init_share/down/: 01_down.sql  01_drop_indexes.sql  02_drop_functions.sql  03_drop_tables.sql.sql  04_drop_types.sql.sql  05_drop_schema.sql
migrations/20250219_init_share/up/: 01_shema.sql  01_up.sql  02_type.sql  03_table.sql  04_functions.sql.sql  05_indexes.sql.sql
migrations/20250220_add_watched_instruments/down/: 01_drop_comments.sql  02_drop_indexes.sql  03_drop_triggers.sql  04_drop_functions.sql  05_drop_tables.sql  06_drop_types.sql
migrations/20250220_add_watched_instruments/up/: 01_tables.sql  01_types.sql  02_tables.sql  03_functions.sql  04_triggers.sql  05_indexes.sql  06_comments.sql  07_init_data.sql
migrations/20250222_add_candles_migration/down/: 01_cleanup.sql
migrations/20250222_add_candles_migration/up/: 01_tables.sql  02_tables.sql  03_indexes.sql  04_functions.sql
src/: main.rs
src/api/: health_api.rs  health_db.rs
src/config/: env.rs  mod.rs  settings.rs  types.rs
src/db/: mod.rs  mongo_db.rs  pool.rs  postgres_db.rs
src/enums/: language.rs  mod.rs  theme.rs  unit.rs
src/env_config/: build_config.rs  build_env.rs
src/env_config/models/: app_config.rs  app_env.rs
src/features/: mod.rs
src/features/candles_tracking/: mod.rs
src/features/candles_tracking/services/updater/: scheduler.rs  tracking_service.rs
src/features/candles_updater/: mod.rs
src/features/candles_updater/services/: updater.rs
src/features/core/models/: bond.rs  etf.rs  future.rs  instrument.rs  mod.rs  money_value.rs  quotation.rs  real_exchange.rs  share.rs  share_type.rs  time_stamp.rs  trading_status.rs
src/features/db/: mod.rs  mongo_db.rs
src/features/db/mongo_extensions/: mod.rs
src/features/db/mongo_extensions/currency_rates/: currency_rates.rs  mappers.rs  mod.rs
src/features/instruments_updater/: mod.rs
src/features/instruments_updater/services/: updater.rs
src/features/market_candles/: mod.rs
src/features/market_candles/tinkoff_1m_historical/: mod.rs  scheduler.rs  service.rs
src/features/market_candles/tinkoff_shares_1m_historical/: mod.rs  scheduler.rs  service.rs  status_tracker.rs  updater.rs
src/features/market_data/: mod.rs
src/features/market_data/services/: mod.rs
src/features/market_reference/: mod.rs
src/features/market_reference/currency_rates/: mappers.rs  mod.rs  models.rs  repository.rs  updater.rs
src/features/market_reference/security_info_updater/: mod.rs  tracking_service.rs
src/features/moex_api/: client.rs  mappers.rs  mod.rs  models.rs  repositories.rs  services.rs  updater.rs
src/features/moex_api/models/: mod.rs  moex_rates_response.rs  moex_security_info_response.rs
src/features/share_updater/: mod.rs
src/features/share_updater/mapper/: mapper.rs
src/features/share_updater/models/: mod.rs  share.rs
src/features/share_updater/services/: mod.rs  share_updater.rs  updater.rs
src/features/stream/: mod.rs
src/features/stream/mapper/: mapper.rs
src/features/stream/models/: candle.rs  mod.rs
src/features/stream/services/: repository.rs  updater.rs
src/features/tinkoff_market_data_stream/: client.rs  mod.rs
src/features/update/: mod.rs
src/features/update/currency_rates/: mod.rs  updater.rs
src/features/user_config/: mod.rs
src/features/user_config/watchlists/: mod.rs  models.rs  services.rs
src/layers/: layer.rs
src/services/: mod.rs
src/services/tinkoff/: client.rs  client_grpc.rs  mod.rs
stream/: mod.rs
stream/models/: candle.rs  mod.rs  watched_instrument.rs
stream/services/: mod.rs  repository.rs  updater.rs
tests/common/: mod.rs
tests/services/: mod.rs
(+25 files in other folders)
