[package]
name = "investment_tracker"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
toml = "0.8.20"
dotenv = "0.15"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full", "test-util"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
config = "0.15.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "time"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }


headers = "0.4.0"
regex = "1.11.1"

reqwest = { version = "0.12.12", features = ["json"] }
time = { version = "0.3.37", features = ["serde", "formatting", "parsing"] }




[dev-dependencies]
reqwest = "0.12.12"
tokio-test = "0.4.4"


[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

dotenv = "0.15"
